Adjust composer for first name

--- a/score.mxml
+++ b/score.mxml
@@ -6,7 +6,7 @@
 		<work-title/>
 	</work>
 	<identification>
-		<creator type="composer">Holden</creator>
+		<creator type="composer">Nolan Holden</creator>
 		<creator type="lyricist"/>
 		<rights/>
 		<encoding>
